--- a/css/components/footer.css
+++ b/css/components/footer.css
@@ -2,6 +2,8 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  gap: 1.25rem;
   padding: 4.375rem 1.875rem;
   width: 100%;
   font-size: 0.75rem;
