--- a/css/components/pages.css
+++ b/css/components/pages.css
@@ -8,11 +8,13 @@
 
 .recipeHeader {
   display: flex;
+  justify-content: center;
   width: 100%;
 }
 
 .recipeDetail .timeAndType {
   display: flex;
+  justify-content: center;
   gap: 1rem;
   padding: 1rem;
 }
@@ -48,12 +50,12 @@
 }
 
 .imageAndNutrition img {
-  width: 70%;
+  width: 55%;
   border-radius: 20px;
 }
 
 .imageAndNutrition .nutrition {
-  width: 28%;
+  width: 43%;
   background: var(--tertiary-clr);
   padding: 1.25rem;
   border-radius: 20px;
@@ -135,6 +137,12 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+.recommendations .separate.little {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
 }
 
 .recommendations .mainIngredients {
