--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -46,3 +46,15 @@ h3 {
   font-weight: 400;
   opacity: 0.5;
 }
+
+@media (max-width: 38.72rem) {
+  h1 {
+    font-size: 30px;
+    font-weight: 700;
+  }
+  h3 {
+    font-size: 0.875rem;
+    font-weight: 400;
+    opacity: 0.5;
+  }
+}
