--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -29,6 +29,11 @@
   font-size: 12px;
   font-weight: 500;
   border-radius: 6px;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+.categories .choice:hover {
+  transform: translateY(-0.25rem);
 }
 
 .categories .choice.active {
