--- a/css/components/pages.css
+++ b/css/components/pages.css
@@ -176,7 +176,7 @@
   justify-content: center;
   align-items: center;
   gap: 0.625rem;
-  height: 30%;
+  height: 200px;
   width: 100%;
   border-radius: 1rem;
   background: var(--shadow-clr);
