--- a/css/global/importer.css
+++ b/css/global/importer.css
@@ -4,5 +4,6 @@
 @import url(/css/components/header.css);
 @import url(/css/components/hero.css);
 @import url(/css/components/recipes.css);
+@import url(/css/components/choice.css);
 @import url(/css/components/footer.css);
 @import url(/css/components/pages.css);
