--- a/css/components/recipes.css
+++ b/css/components/recipes.css
@@ -21,11 +21,12 @@ h4 {
   display: flex;
   flex-direction: column;
   width: 17.5rem;
-  background: var(--tertiary-clr);
+  background: var(--primary-clr);
   padding: 0.625rem;
-  border-radius: 1rem;
+  border-radius: 0.625rem;
   gap: 0.625rem;
   position: relative;
+  border: 1px solid var(--shadow-clr);
   box-shadow: 0.1px 0.2px 10px var(--shadow-clr);
   transition: all 0.3s ease-in-out;
 }
@@ -68,7 +69,7 @@ h4 {
 }
 
 .recipe img {
-  border-radius: 0.5rem;
+  border-radius: 0.625rem;
   width: 100%;
 }
 
