--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -25,7 +25,7 @@
 
 .categories .choice {
   padding: 0.5rem 1rem;
-  border: 1px solid var(--quaternary-clr);
+  border: 1px solid var(--shadow-clr);
   font-size: 12px;
   font-weight: 500;
   border-radius: 6px;
@@ -38,7 +38,7 @@
 
 h1 {
   font-size: 35px;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 h3 {
@@ -50,11 +50,8 @@ h3 {
 @media (max-width: 38.72rem) {
   h1 {
     font-size: 30px;
-    font-weight: 700;
   }
   h3 {
     font-size: 0.875rem;
-    font-weight: 400;
-    opacity: 0.5;
   }
 }
