--- a/css/components/recipes.css
+++ b/css/components/recipes.css
@@ -100,7 +100,7 @@ h4 {
   font-weight: 600;
   padding: 0.25rem 0.5rem;
   border-radius: 0.75rem;
-  border: 1px solid var(--quaternary-clr);
+  border: 1px solid var(--shadow-clr);
 }
 
 .recipe .info {
