--- a/css/components/recipes.css
+++ b/css/components/recipes.css
@@ -62,14 +62,14 @@ h4 {
 
 .recipe .like i {
   font-size: 0.75rem;
-  color: var(--quaternary-clr);
+  color: var(--shadow-clr);
 }
 .recipe .like.active i {
   color: var(--orange);
 }
 
 .recipe img {
-  border-radius: 0.625rem;
+  border-radius: 0.3125rem;
   width: 100%;
 }
 
