--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -23,6 +23,11 @@
   margin-inline: auto;
 }
 
+.categories .choice.active {
+  background: var(--secondary-clr);
+  color: var(--primary-clr);
+}
+
 .categories .choice {
   padding: 0.5rem 1rem;
   border: 1px solid var(--shadow-clr);
