--- a/css/global/root.css
+++ b/css/global/root.css
@@ -2,7 +2,7 @@
   --primary-clr: #000;
   --secondary-clr: #fff;
   --tertiary-clr: #f2fdff29;
-  --shadow-clr: #ffffff3a;
+  --shadow-clr: #3f3f46;
   --liked: #ff3838;
   --unLiked: #cccccc;
   --max-width: 80rem;
